<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.pdbm</groupId>
	<artifactId>panama</artifactId>
	<version>0.1</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<java.version>17</java.version>
	</properties>

	<build>
		<plugins>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<compilerArgs>
						<arg>--add-modules</arg>
						<arg>jdk.incubator.foreign</arg>
					</compilerArgs>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<executable>java</executable>
					<workingDirectory>target/classes</workingDirectory>
					<arguments>
						<argument>--add-modules=jdk.incubator.foreign </argument>
						<argument>--enable-native-access=ALL-UNNAMED</argument>
						<argument>de.pdbm.Quicksort</argument>
					</arguments>

				</configuration>
			</plugin>

		</plugins>
	</build>

</project>